update frontend env for local enviroment

--- a/Src/Frontend/webapp/.env
+++ b/Src/Frontend/webapp/.env
@@ -1,5 +1,14 @@
-REACT_APP_BASE_URL = https://streetmed-backend-900663028964.us-central1.run.app
+# Local Development Configuration
+REACT_APP_BASE_URL=http://localhost:8080
 
-# Authentication settings
+# Authentication settings for local development
 REACT_APP_USE_AUTH=false
 REACT_APP_USE_LOCAL_AUTH=true
+
+# Development mode flag
+REACT_APP_ENVIRONMENT=development
+
+
+# Local development specific settings
+REACT_APP_DEBUG_MODE=true
+REACT_APP_ENABLE_LOGGING=true
