--- a/Src/Backend/src/main/resources/application-local.properties
+++ b/Src/Backend/src/main/resources/application-local.properties
@@ -1,12 +1,54 @@
 # Local Development Configuration
 spring.application.name=StreetMed_Backend
-server.port=8080
 server.address=localhost
 server.shutdown=graceful
+
+# ============================================
+# TLS/SSL Configuration
+# ============================================
+# Enable TLS
+server.ssl.enabled=true
+
+# HTTPS Port
+server.port=8443
+
+# HTTP Port (for dual-port mode)
+server.http.port=8080
+
+# Keystore Configuration (will be auto-generated on first run)
+server.ssl.key-store=classpath:keystore/streetmed-keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=streetmed123
+server.ssl.key-alias=streetmed
+
+# TLS Protocol Configuration
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
+
+# Custom TLS Configuration
+tls.dual.port.enabled=true
+tls.force.https=false
+
+# Certificate Generation Properties (for KeystoreGenerator)
+tls.keystore.path=src/main/resources/keystore/streetmed-keystore.p12
+tls.keystore.password=streetmed123
+tls.key.alias=streetmed
+tls.key.size=2048
+tls.validity.days=365
+tls.common.name=localhost
+tls.organization=StreetMed@Pitt
+tls.organization.unit=Development
+tls.locality=Pittsburgh
+tls.state=PA
+tls.country=US
+# ============================================
 
 # Session Configuration
 spring.session.timeout=30m
 server.servlet.session.timeout=30m
+# secure cookies
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
 
 # Local MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,8 +56,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/streetmed?useSSL=false&serverT
 spring.datasource.username=streetmed_user
 spring.datasource.password=streetmed_password
 
-# CORS configuration for local development
-cors.allowed-origins=http://localhost:3000,http://127.0.0.1:3000
+# CORS configuration for local development (updated for HTTPS)
+cors.allowed-origins=http://localhost:3000,https://localhost:3000,http://127.0.0.1:3000,https://127.0.0.1:3000
 
 # Hikari Connection Pool Configuration (optimized for local development)
 spring.datasource.hikari.pool-name=LocalMySQLHikariCP
@@ -40,6 +82,11 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.hibernate.orm.connections.pooling=WARN
+
+# TLS/SSL Debug Logging (NEW)
+logging.level.com.backend.streetmed_backend.config.TLSConfig=DEBUG
+logging.level.com.backend.streetmed_backend.util.KeystoreGenerator=DEBUG
+logging.level.com.backend.streetmed_backend.controller.Test.TLSTestController=DEBUG
 
 # Transaction Configuration
 spring.jpa.properties.hibernate.current_session_context_class=thread
@@ -78,10 +125,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Client Authentication Configuration
 security.client.authentication.key=street-med-client-authentication-key
 security.client.validation.relaxed=true
-
-# Development-specific settings
-management.endpoints.web.exposure.include=health,info,env,beans
-management.endpoint.health.show-details=always
 
 # Enable development tools
 spring.devtools.restart.enabled=true
