replace security protocal for admincontroller, authcontroller, pwd recovery controller and add the pwd change confirmation method in the EmailService

--- a/Src/Backend/src/main/resources/application-local.properties
+++ b/Src/Backend/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-# Local Development Configuration
+# Local Development Configuration with Proper TLS Enforcement
 spring.application.name=StreetMed_Backend
 server.address=localhost
 server.shutdown=graceful
@@ -29,6 +29,15 @@ server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
 tls.dual.port.enabled=true
 tls.force.https=false
 
+# ============================================
+# ADMIN SECURITY ENFORCEMENT
+# ============================================
+# Enforce HTTPS for admin endpoints
+tls.enforce.admin=true
+tls.allow.http.in.dev=false
+
+# ============================================
+
 # Certificate Generation Properties (for KeystoreGenerator)
 tls.keystore.path=src/main/resources/keystore/streetmed-keystore.p12
 tls.keystore.password=streetmed123
@@ -41,7 +50,6 @@ tls.organization.unit=Development
 tls.locality=Pittsburgh
 tls.state=PA
 tls.country=US
-# ============================================
 
 # Session Configuration
 spring.session.timeout=30m
@@ -83,10 +91,11 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.hibernate.orm.connections.pooling=WARN
 
-# TLS/SSL Debug Logging (NEW)
+# TLS/SSL Debug Logging
 logging.level.com.backend.streetmed_backend.config.TLSConfig=DEBUG
 logging.level.com.backend.streetmed_backend.util.KeystoreGenerator=DEBUG
 logging.level.com.backend.streetmed_backend.controller.Test.TLSTestController=DEBUG
+logging.level.com.backend.streetmed_backend.controller.Auth.AdminController=DEBUG
 
 # Transaction Configuration
 spring.jpa.properties.hibernate.current_session_context_class=thread
@@ -114,7 +123,7 @@ spring.data.mongodb.database=streetmed
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Email Configuration (you can use the same or test credentials)
+# Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=streetmedgo@gmail.com
