fix the login issue

--- a/Src/Backend/src/main/resources/application-local.properties
+++ b/Src/Backend/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 # Local Development Configuration with Proper TLS Enforcement
 spring.application.name=StreetMed_Backend
-server.address=localhost
+server.address=0.0.0.0
 server.shutdown=graceful
 
 # ============================================
@@ -9,13 +9,16 @@ server.shutdown=graceful
 # Enable TLS
 server.ssl.enabled=true
 
+
 # HTTPS Port
 server.port=8443
 
 # HTTP Port (for dual-port mode)
 server.http.port=8080
 
-# Keystore Configuration (will be auto-generated on first run)
+
+
+# Keystore Configuration
 server.ssl.key-store=classpath:keystore/streetmed-keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=streetmed123
@@ -26,15 +29,15 @@ server.ssl.protocol=TLS
 server.ssl.enabled-protocols=TLSv1.2,TLSv1.3
 
 # Custom TLS Configuration
-tls.dual.port.enabled=true
 tls.force.https=false
+tls.dual.port.enabled=true
 
 # ============================================
 # ADMIN SECURITY ENFORCEMENT
 # ============================================
 # Enforce HTTPS for admin endpoints
 tls.enforce.admin=true
-tls.allow.http.in.dev=false
+tls.allow.http.in.dev=true
 
 # ============================================
 
@@ -96,6 +99,8 @@ logging.level.com.backend.streetmed_backend.config.TLSConfig=DEBUG
 logging.level.com.backend.streetmed_backend.util.KeystoreGenerator=DEBUG
 logging.level.com.backend.streetmed_backend.controller.Test.TLSTestController=DEBUG
 logging.level.com.backend.streetmed_backend.controller.Auth.AdminController=DEBUG
+logging.level.org.apache.coyote.http11=DEBUG
+logging.level.org.apache.tomcat=INFO
 
 # Transaction Configuration
 spring.jpa.properties.hibernate.current_session_context_class=thread
@@ -134,6 +139,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Client Authentication Configuration
 security.client.authentication.key=street-med-client-authentication-key
 security.client.validation.relaxed=true
+
+# Security Configuration
+security.use.custom.encryption=true
+auth.dev.token.enabled=true
 
 # Enable development tools
 spring.devtools.restart.enabled=true
