--- a/Src/Frontend/webapp/.env
+++ b/Src/Frontend/webapp/.env
@@ -1,7 +1,8 @@
 # Local Development Configuration with TLS Support
 # Primary HTTPS endpoint
-REACT_APP_BASE_URL=https://localhost:8443
+REACT_APP_BASE_URL=http://localhost:8080
 REACT_APP_SECURE_BASE_URL=https://localhost:8443
+REACT_APP_BASE_URL_HTTP=http://localhost:8080
 
 # Secondary HTTP endpoint (for non-secure operations in dev)
 REACT_APP_BASE_URL_HTTP=http://localhost:8080
@@ -9,7 +10,7 @@ REACT_APP_BASE_URL_HTTP=http://localhost:8080
 # Authentication and TLS settings
 REACT_APP_USE_AUTH=true
 REACT_APP_USE_LOCAL_AUTH=true
-REACT_APP_USE_TLS=true
+REACT_APP_USE_TLS=false
 REACT_APP_ALLOW_SELF_SIGNED_CERT=true
 
 # Environment flag
