fix: //backend configuration file

--- a/Src/Backend/src/main/resources/application-local.properties
+++ b/Src/Backend/src/main/resources/application-local.properties
@@ -54,6 +54,9 @@ tls.locality=Pittsburgh
 tls.state=PA
 tls.country=US
 
+# Exclude auto-configurations for unused dependencies
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration,org.springframework.boot.autoconfigure.data.cassandra.CassandraDataAutoConfiguration,org.springframework.boot.autoconfigure.web.reactive.function.client.WebClientAutoConfiguration
+
 # Session Configuration
 spring.session.timeout=30m
 server.servlet.session.timeout=30m
