--- a/Src/Frontend/webapp/.env
+++ b/Src/Frontend/webapp/.env
@@ -29,4 +29,4 @@ REACT_APP_WITH_CREDENTIALS=true
 REACT_APP_REQUEST_TIMEOUT=30000
 
 # Certificate acceptance URL
-REACT_APP_CERT_CHECK_URL=https://localhost:8443/api/test/tls/status
+REACT_APP_CERT_CHECK_URL=https://localhost:8443/
