add DANGEROUSLY_DISABLE_HOST_CHECK=true ../ in the env file

--- a/Src/Frontend/webapp/.env
+++ b/Src/Frontend/webapp/.env
@@ -30,3 +30,5 @@ REACT_APP_REQUEST_TIMEOUT=30000
 
 # Certificate acceptance URL
 REACT_APP_CERT_CHECK_URL=https://localhost:8443/
+
+DANGEROUSLY_DISABLE_HOST_CHECK=true
