--- a/Src/Frontend/webapp/.env
+++ b/Src/Frontend/webapp/.env
@@ -8,9 +8,9 @@ REACT_APP_BASE_URL_HTTP=http://localhost:8080
 REACT_APP_BASE_URL_HTTP=http://localhost:8080
 
 # Authentication and TLS settings
-REACT_APP_USE_AUTH=false
+REACT_APP_USE_AUTH=true
 REACT_APP_USE_LOCAL_AUTH=true
-REACT_APP_USE_TLS=false
+REACT_APP_USE_TLS=true
 REACT_APP_ALLOW_SELF_SIGNED_CERT=true
 
 # Environment flag
@@ -23,12 +23,12 @@ REACT_APP_ENABLE_LOGGING=true
 REACT_APP_LOG_LEVEL=debug
 
 # CORS and security settings
-REACT_APP_WITH_CREDENTIALS=false
+REACT_APP_WITH_CREDENTIALS=true
 
 # Timeout settings (in milliseconds)
 REACT_APP_REQUEST_TIMEOUT=30000
 
 # Certificate acceptance URL
-REACT_APP_CERT_CHECK_URL=https://localhost:8443/
+REACT_APP_CERT_CHECK_URL=https://localhost:8443/api/test/tls/cert-test
 
 DANGEROUSLY_DISABLE_HOST_CHECK=true
