--- a/Src/Frontend/webapp/Dockerfile
+++ b/Src/Frontend/webapp/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy the rest of the frontend code
 COPY . .
