--- a/Src/Frontend/webapp/package.json
+++ b/Src/Frontend/webapp/package.json
@@ -1,57 +1,30 @@
 {
-  "name": "streetmed-frontend",
-  "version": "1.0.0",
+  "name": "webapp",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
-    "react": "^18.2.0",
-    "react-calendar": "^4.6.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "start:https": "HTTPS=true react-scripts start",
-    "start:https-custom": "HTTPS=true SSL_CRT_FILE=.cert/localhost.pem SSL_KEY_FILE=.cert/localhost-key.pem react-scripts start",
-    "start:dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
-    "start:dev-https": "REACT_APP_ENVIRONMENT=development HTTPS=true react-scripts start",
-    "start:prod": "REACT_APP_ENVIRONMENT=production react-scripts start",
-    "build": "react-scripts build",
-    "build:dev": "REACT_APP_ENVIRONMENT=development react-scripts build",
-    "build:prod": "REACT_APP_ENVIRONMENT=production react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cert:generate": "node scripts/generate-cert.js",
-    "dev": "concurrently \"npm run start:backend\" \"npm run start:https\"",
-    "start:backend": "cd ../backend && mvn spring-boot:run -Dspring.profiles.active=local"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
+    "axios": "^1.13.4",
+    "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "concurrently": "^8.2.0",
-    "mkcert": "^3.2.0"
-  },
-  "proxy": "https://localhost:8443"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
+  }
 }
