update the docker files and properties

--- a/Src/Backend/src/main/resources/application-local.properties
+++ b/Src/Backend/src/main/resources/application-local.properties
@@ -55,7 +55,7 @@ tls.state=PA
 tls.country=US
 
 # Exclude auto-configurations for unused dependencies
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration,org.springframework.boot.autoconfigure.data.cassandra.CassandraDataAutoConfiguration,org.springframework.boot.autoconfigure.web.reactive.function.client.WebClientAutoConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration,org.springframework.boot.autoconfigure.data.cassandra.CassandraDataAutoConfiguration,org.springframework.boot.autoconfigure.web.reactive.function.client.WebClientAutoConfiguration,org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
 
 # Session Configuration
 spring.session.timeout=30m
@@ -122,10 +122,6 @@ spring.lifecycle.timeout-per-shutdown-phase=20s
 # Swagger UI path
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
-
-# Local MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/streetmed
-spring.data.mongodb.database=streetmed
 
 # File upload settings
 spring.servlet.multipart.max-file-size=10MB
