fix: set the true to customer encryption

--- a/Src/Backend/src/main/resources/application-prod.properties
+++ b/Src/Backend/src/main/resources/application-prod.properties
@@ -105,12 +105,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Client Authentication Configuration
 # ============================================
 security.client.authentication.key=${CLIENT_AUTH_KEY:street-med-client-authentication-key}
-security.client.validation.relaxed=false
+security.client.validation.relaxed=true
 
 # ============================================
 # Production Security Settings
 # ============================================
-security.use.custom.encryption=false
+# Enable custom ECDH encryption for API requests
+security.use.custom.encryption=true
 auth.dev.token.enabled=false
 
 # ============================================
