--- a/Src/Backend/src/main/resources/application-prod.properties
+++ b/Src/Backend/src/main/resources/application-prod.properties
@@ -112,7 +112,17 @@ security.client.validation.relaxed=true
 # ============================================
 # Enable custom ECDH encryption for API requests
 security.use.custom.encryption=true
-auth.dev.token.enabled=false
+
+# Enable token-based authentication
+# Note: This controls token validation in TLSService
+auth.dev.token.enabled=true
+
+# ============================================
+# TLS Settings (Cloud Run handles TLS termination)
+# ============================================
+server.ssl.enabled=false
+tls.enforce.admin=false
+tls.allow.http.in.dev=true
 
 # ============================================
 # Logging Configuration
